adjusted styles to center content on larger screen

--- a/pomodoroTimer/style.css
+++ b/pomodoroTimer/style.css
@@ -38,6 +38,9 @@ html {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
+  -webkit-box-justify-content: center;
+    -ms-flex-justify-content: center;
+          justify-content: center;
 }
 
 .clockContainer {
